Ajout de la notion de blacklist IP dans le settings

--- a/settings.ini
+++ b/settings.ini
@@ -1,4 +1,4 @@
-﻿[database_section]
+[database_section]
 ; identifiants de connexion à la base
 host = ''
 base = ''
@@ -8,3 +8,5 @@ pass = ''
 [app_section]
 ; votre token Slack
 token= ''
+; liste des IPS à blacklister. utiliser la virgule comme séparateur
+IPblacklists = ''
